continue working on mobile responsive -change fonts on mobile to 2xl for title and xl for par -change nav bar logo sizing between mobile and desktop -fix routing for location card images on WC and LLC page

--- a/app/static/css/input.css
+++ b/app/static/css/input.css
@@ -7,9 +7,9 @@
         @apply text-center underline hover:text-white duration-500;
     }
     .title {
-        @apply lg:text-2xl sm:text-xl
+        @apply lg:text-xl sm:text-2xl
     }
     .par {
-        @apply lg:text-sm sm:text-lg
+        @apply lg:text-sm sm:text-xl
     }
 }
