--- a/app/static/css/output.css
+++ b/app/static/css/output.css
@@ -601,21 +601,21 @@ video {
 
 @media (min-width: 640px) {
   .title {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .title {
     font-size: 1.5rem;
     line-height: 2rem;
   }
 }
 
+@media (min-width: 1024px) {
+  .title {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 @media (min-width: 640px) {
   .par {
-    font-size: 1.125rem;
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
@@ -738,6 +738,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-3\/4 {
+  height: 75%;
 }
 
 .h-fit {
@@ -1010,6 +1014,11 @@ video {
 
 .font-sans {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-5xl {
